[gd_scene load_steps=6 format=4 uid="uid://baacoqgq7bd8u"]

[ext_resource type="Script" uid="uid://b77vcg0jrc6jp" path="res://scripts/connector_button.gd" id="1"]

[sub_resource type="Animation" id="Animation_lc665"]
resource_name = "Disabled"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.5, 0.5, 0.5, 1)]
}

[sub_resource type="Animation" id="Animation_hsypx"]
resource_name = "Glow"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.5, 0.5, 0.5, 1), Color(1, 1, 1, 1), Color(0.5, 0.5, 0.5, 1)]
}

[sub_resource type="Animation" id="Animation_ocd8h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hsypx"]
_data = {
&"Disabled": SubResource("Animation_lc665"),
&"Glow": SubResource("Animation_hsypx"),
&"RESET": SubResource("Animation_ocd8h")
}

[node name="InputConnector" type="Control"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -35.0
offset_right = 45.0
offset_bottom = 35.0
grow_vertical = 2
pivot_offset = Vector2(35, 35)
size_flags_horizontal = 8
size_flags_vertical = 4
script = ExtResource("1")
type = 2
texture_scale = 0.35

[node name="Connector" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(35, 35)

[node name="ColorLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -20.0
offset_right = 9.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "w"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hsypx")
}

[connection signal="dropped" from="." to="." method="_on_dropped"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_connector_button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_connector_button_mouse_exited"]
